--- a/vidicaweb/src/index.css
+++ b/vidicaweb/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .text-input-box{
+        background: #FFFFFF;
+        border: 1px solid #F0F1F2;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+    }
+}
