--- a/vidicaweb/src/index.css
+++ b/vidicaweb/src/index.css
@@ -9,4 +9,20 @@
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         border-radius: 10px;
     }
+    .navigation-bar-box{
+        background: #FDF5F9;
+        border-radius: 10px;
+        margin: 15px 5px 15px 5px;
+    }
+
+    .menu-option-box{
+        background: #E8E5EA;
+        border-radius: 20px;
+        margin: 15px 15px 15px 15px;
+        color: 2E4765;
+        padding: 10px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+
+    }
 }
