--- a/vidicaweb/src/index.css
+++ b/vidicaweb/src/index.css
@@ -11,8 +11,9 @@
     }
     .navigation-bar-box{
         background: #FDF5F9;
-        border-radius: 10px;
-        margin: 15px 5px 15px 5px;
+        border-radius: 25px;
+        margin: 15px 2px 15px 2px;
+        padding: 8px;
     }
 
     .menu-option-box{
@@ -22,7 +23,23 @@
         color: 2E4765;
         padding: 10px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
 
+    .header-box{
+        border-bottom: 1px solid gray;
 
     }
+
+    .search-bar-box{
+        background: #CDD3DA;
+        border: 1px solid #F0F1F2;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 20px;
+    }
+
+    .image_profile{
+        clip-path: circle();
+
+    }
+
 }
