--- a/vidicaweb/src/index.css
+++ b/vidicaweb/src/index.css
@@ -39,7 +39,20 @@
 
     .image_profile{
         clip-path: circle();
+    }
+
+    .issues-box{
+        border-left: 1px solid gray;
 
     }
+
+    .issue-card-box{
+        border-radius: 20px;
+        margin: 15px 15px 15px 15px;
+        color: 2E4765;
+        padding: 10px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+    
 
 }
