Adding of map view

--- a/vidicaweb/src/index.css
+++ b/vidicaweb/src/index.css
@@ -41,6 +41,14 @@
         clip-path: circle();
     }
 
+    .map-box{
+
+    }
+
+    .image-map-box{
+        object-fit: cover;
+    }
+
     .issues-box{
         border-left: 1px solid gray;
         margin-right: 0%;
