--- a/vidicaweb/src/index.css
+++ b/vidicaweb/src/index.css
@@ -63,5 +63,12 @@
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
     
+    .info_box{
+        border-radius: 10px;
+        margin: 15px 15px 15px 15px;
+        color: 2E4765;
+        padding: 10px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
 
 }
